.provarCaches/00D5f000005vwGkEAI/objects/rstk__sytxncstproc__e.object
<CustomObject>
    <fields>
        <fullName>rstk__copyclientcustomfieldsfromsydata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>copyclientcustomfieldsfromsydata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__count__c</fullName>
        <label>count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__performfieldsourcing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>performfieldsourcing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sytxncstids__c</fullName>
        <label>Cost Transaction Record IDs</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Cost Transaction Processing</label>
    <pluralLabel>Cost Transaction Processing</pluralLabel>
</CustomObject>